gateway/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: op-gateway
  namespace: ns-gateway
  annotations:
    networking.gke.io/certmap: wildcard-op-twsttech-io-cert-map
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: "All"
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: "All"
  addresses:
  - type: NamedAddress
    value: twst-public-ip-op
