gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: training-route1-api
spec:
  parentRefs:
  - kind: Gateway
    name: op-gateway
    namespace: ns-gateway
  hostnames:
   - training.twsttech.io.com
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: training
      port: 80
